--- a/tool.html
+++ b/tool.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="tool.css">
     <title>MRP Calculator</title>
 </head>
 
@@ -73,15 +73,16 @@
                     <div>
                         <label for="cost">Cost Price</label>
                         <div>
+    
                             <input type="number" id="cost" name="cost" placeholder="Enter your cost price" min="0"
-                                required>
+                            oninput="validity.valid||(value='');" required>
                         </div>
                     </div>
 
                     <div>
                         <label for="cost">Margin</label>
                         <div>
-                            <input type="number" id="margin" placeholder="Enter margin(in %)" min="0" required>
+                            <input type="number" id="margin" placeholder="Enter margin(in %)" min="0" oninput="validity.valid||(value='');" required>
                         </div>
                     </div>
 
